<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pedir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="games.jjr.restaurante.Pedir">

    <Button
        android:text="@string/Ligar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLigar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/Escolher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLigar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnEscolherRestaurante"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnEscolherRestaurante"
        android:layout_alignParentTop="true"
        android:background="@drawable/cel"/>

    <TextView
        android:text="Rest.:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labRestaurante"
        android:layout_marginTop="83dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/labTel"
        android:layout_alignStart="@+id/labTel"
        android:textColor="#ffffff" />

    <TextView
        android:text="@string/Telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labTel"
        android:layout_marginLeft="113dp"
        android:layout_marginStart="113dp"
        android:layout_below="@+id/labRestaurante"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff" />
</RelativeLayout>
